feat: add initial draft session.proto